--- a/blog-springboot/src/main/resources/application.yml
+++ b/blog-springboot/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://你的ip:3306/blog?serverTimezone=Asia/Shanghai&allowMultiQueries=true
-    username: MYSQL用户名
-    password: MYSQL密码
+    url: jdbc:mysql://192.168.1.20:3306/blog?serverTimezone=Asia/Shanghai&allowMultiQueries=true
+    username: root
+    password: root
     hikari:
       minimum-idle: 5
       # 空闲连接存活最大时间，默认600000（10分钟）
@@ -30,15 +30,15 @@ spring:
       connection-test-query: SELECT 1
   # redis配置
   redis:
-    host: 你的ip
+    host: 192.168.1.20
     port: 6379
-    password: Redis密码
+    password: root
   # mq配置
   rabbitmq:
-    host: 你的ip
+    host: 192.168.1.20
     port: 5672
-    username: rabbitmq用户名
-    password: rabbitmq密码
+    username: guest
+    password: guest
     listener:
       simple:
         retry:
@@ -46,14 +46,14 @@ spring:
           max-attempts: 3 #最大重试次数
           initial-interval: 3000 #重试间隔时间（单位毫秒）
   # es配置 若搜索模式为mysql可删除
-  elasticsearch:
-    rest:
-      uris: 你的IP:9200
+  # elasticsearch:
+  #   rest:
+  #     uris: 你的IP:9200
   # 邮箱配置
   mail:
     host: smtp.qq.com
-    username: 邮箱用户名
-    password: 邮箱授权码
+    username: 504680122@qq.com
+    password: lrpiyyzecarzbhfb
     default-encoding: UTF-8
     port: 587
     properties:
@@ -82,18 +82,18 @@ search:
 
 # 上传模式 可选 oss或local  （http://和最后的/一定不能去！！！）
 upload:
-  mode: local
+  mode: oss
   local:
     # nginx映射本地文件路径，无域名则为 ip:83
-    url: http://你的文件上传子域名/
+    url: http://localhost:83/
     # 本地文件存储路径
     path: /usr/local/upload/
   oss:
-    url: http://Bucket域名/
-    endpoint: OSS配置endpoint
-    accessKeyId: OSS配置accessKeyId
-    accessKeySecret: OSS配置accessKeySecret
-    bucketName: OSS配置bucketName
+    url: http://secret-land.oss-cn-hangzhou.aliyuncs.com/
+    endpoint: oss-cn-hangzhou.aliyuncs.com
+    accessKeyId: LTAI5tGWxyVX2uKQHYCb6yHe
+    accessKeySecret: OZnk6nqiKo1DOiztw9MRhXuVkLA8UN 
+    bucketName: secret-land 
   cos:
     url: http://Bucket域名/
     secretId: cos的secretId
@@ -106,15 +106,15 @@ website:
   url: http://你的主域名或ip
 
 #第三方配置信息
-qq:
-  app-id: QQ APPID
-  check-token-url: https://graph.qq.com/oauth2.0/me?access_token={access_token}
-  user-info-url: https://graph.qq.com/user/get_user_info?openid={openid}&access_token={access_token}&oauth_consumer_key={oauth_consumer_key}
+# qq:
+#   app-id: QQ APPID
+#   check-token-url: https://graph.qq.com/oauth2.0/me?access_token={access_token}
+#   user-info-url: https://graph.qq.com/user/get_user_info?openid={openid}&access_token={access_token}&oauth_consumer_key={oauth_consumer_key}
 
-weibo:
-  app-id: 微博APPID
-  app-secret: 微博APPSECRET
-  grant-type: authorization_code
-  redirect-url: 微博回调地址
-  access-token-url: https://api.weibo.com/oauth2/access_token
-  user-info-url: https://api.weibo.com/2/users/show.json?uid={uid}&access_token={access_token}
+# weibo:
+#   app-id: 微博APPID
+#   app-secret: 微博APPSECRET
+#   grant-type: authorization_code
+#   redirect-url: 微博回调地址
+#   access-token-url: https://api.weibo.com/oauth2/access_token
+#   user-info-url: https://api.weibo.com/2/users/show.json?uid={uid}&access_token={access_token}
